Changed some options. Fixed scrollbars showing up.

--- a/less/style.less
+++ b/less/style.less
@@ -2,7 +2,8 @@
 @lightgrey: #C9C8BF;
 @lionred: #e32526;
 
-body { 
+body {
+	overflow: hidden; 
 	margin: 0; 
 	font-family: "fira-sans",sans-serif;
 	font-style: normal;
